[package]
name = "ecsimple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "^0.2"
lazy_static = "^1.4.0"
chrono = "^0.4.0"
bytes = "^0.5.3"
regex = "1"
hex = "^0.4.3"


[dependencies.num-bigint]
version = "0.8.1"
features = [
    "i128",
    "u64_digit",
    "prime",
    "zeroize",
]
default-features = false
package = "num-bigint-dig"
