[package]
name = "ectst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecsimple = {path = "../../"}
extargsparse_worker = "^0.2.0"
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
chrono = "^0.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"