[package]
name = "ectst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecsimple = {path = "../../",features = ["debug_mode"]}
extargsparse_worker = "^0.2.0"
extargsparse_codegen = "^0.1.4"
lazy_static = "^1.4.0"
regex = "1"
chrono = "^0.4.0"
log4rs = "^0.8.3"
log = "^0.4.8"
num-traits = "^0.2"
num-bigint = "^0.4.3"
base64 = "^0.13.0"
rand_core = "^0.6.4"
rand = "^0.8.5"


[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winbase", "debugapi", "stringapiset", "winnls", "datetimeapi",
	"sysinfoapi", "wincred","combaseapi","errhandlingapi"]
